--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "wechat-yoo",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "一个基于TypeScript的微信公众平台开发框架.",
   "main": "dist/index.js",
   "type": "module",
+  "private": true,
   "dependencies": {
     "eventemitter2": "^6.4.9",
     "fast-xml-parser": "^4.0.12"
@@ -24,7 +25,7 @@
     "typescript": "^4.9.3"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc && ts-node-esm SetupPackage.ts"
   },
   "repository": {
     "type": "git",
